Triggers: support managing columns for data iteration (#2938)